--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc --build tsconfig.json",
-    "test": "jest test/test.js",
+    "test": "ts-jest test/test.ts",
     "docs:test": "docgen --jsdoc jsdoc.json --source src/*.ts src/**/*.ts --custom docs/custom.yml",
     "docs": "docgen --jsdoc jsdoc.json --source src/*.ts src/**/*.ts --custom docs/custom.yml --output docs/docs.json"
   },
@@ -23,47 +23,36 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SushiBtw/discord-music-player.git"
+    "url": "git+https://github.com/windopper/discord-music-player.git"
   },
-  "bugs": {
-    "url": "https://github.com/SushiBtw/discord-music-player/issues"
-  },
-  "homepage": "https://discord-music-player.js.org/",
   "author": "SushiBtw",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
-    "@discordjs/voice": "^0.11.0",
-    "apple-music-metadata": "^1.0.10",
-    "axios": "^0.22.0",
-    "axios-retry": "^3.2.0",
-    "discord-ytdl-core": "^5.0.4",
-    "domhandler": "^4.2.2",
-    "ffmpeg-static": "^5.0.2",
-    "htmlparser2": "^7.1.2",
-    "isomorphic-unfetch": "^3.1.0",
-    "libsodium-wrappers": "^0.7.9",
-    "spotify-url-info": "^3.1.7",
-    "youtubei": "^0.0.1-rc.34",
-    "ytdl-core": "^4.11.2",
-    "ytsr": "^3.6.0"
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.1",
+    "domhandler": "^5.0.3",
+    "ffmpeg-static": "^5.2.0",
+    "htmlparser2": "^9.0.0",
+    "isomorphic-unfetch": "^4.0.2",
+    "libsodium-wrappers": "^0.7.13",
+    "play-dl": "^1.9.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-typescript": "^7.15.0",
-    "@types/node": "^16.6.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "assert-diff": "^3.0.2",
-    "discord.js": "^14.3.0",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "assert-diff": "^3.0.3",
+    "discord.js": "^14.14.1",
     "discord.js-docgen": "github:discordjs/docgen#ts-patch",
-    "eslint": "^7.32.0",
-    "jest": "^27.0.6",
+    "eslint": "^8.56.0",
     "jsdoc-babel": "^0.5.0",
-    "ts-node": "^10.2.0",
-    "typescript": "^4.3.5"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "directories": {
     "doc": "docs",
